--- a/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
+++ b/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
@@ -35,9 +35,13 @@
               </content>
             </Tab>
             <Tab text="Sports">
-              <content>
-                  <fx:include source="../../components/sports/list-sport.fxml" translateX="20.0" />
-              </content>
+                <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" translateX="20.0">
+                        <children>
+                            <fx:include source="../../components/sports/list-sport.fxml"  />
+                        </children>
+                    </AnchorPane>
+                </content>
             </Tab>
             <Tab text="Informations">
               <content>
