--- a/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
+++ b/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
@@ -1,9 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.coachs.ControllerMonEspace">
    <children>
       <fx:include source="../../components/headers/header-coach.fxml" />
    </children>
+   <Text fx:id="coachName" layoutX="32.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="AdminName" wrappingWidth="241.2509765625">
+      <font>
+         <Font name="System Bold" size="30.0" />
+      </font>
+   </Text>
+   <ProgressBar fx:id="coachGrade" layoutX="273.0" layoutY="82.0" prefHeight="35.0" prefWidth="200.0" progress="0.74" style="-fx-accent: red;" />
+   <TabPane layoutX="23.0" layoutY="133.0" prefHeight="627.0" prefWidth="936.0" tabClosingPolicy="UNAVAILABLE">
+      <tabs>
+         <Tab text="Programmes">
+            <content>
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+         </Tab>
+         <Tab text="Séances">
+            <content>
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+         </Tab>
+         <Tab text="Recettes">
+            <content>
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+         </Tab>
+         <Tab text="Exercices">
+            <content>
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+         </Tab>
+         <Tab text="Informations">
+            <content>
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+         </Tab>
+      </tabs>
+   </TabPane>
 </Pane>
