--- a/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
+++ b/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
@@ -37,16 +37,25 @@
             <Tab text="Sports">
                 <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" translateX="20.0">
-                        <children>
-                            <fx:include source="../../components/sports/list-sport.fxml"  />
-                        </children>
+                     <children>
+                            <fx:include source="../../components/sports/list-sport.fxml" />
+                     </children>
                     </AnchorPane>
                 </content>
             </Tab>
-            <Tab text="Informations">
+            <Tab text="Materiels">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                      <fx:include source="../../components/materiels/list-materiel.fxml" />
+                  </children>
+                </AnchorPane>
               </content>
+            </Tab>
+            <Tab text="Informations">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               </content>
             </Tab>
         </tabs>
       </TabPane>
