--- a/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
+++ b/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
@@ -37,7 +37,11 @@
          </Tab>
          <Tab text="Exercices">
             <content>
-               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                     <fx:include source="../../components/exercices/list-exercice.fxml" />
+                  </children>
+               </AnchorPane>
             </content>
          </Tab>
          <Tab text="Informations">
