--- a/src/main/resources/com/fitj/components/headers/header-client.fxml
+++ b/src/main/resources/com/fitj/components/headers/header-client.fxml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.headers.ControllerHeaderClient">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.headers.ControllerHeaderClient">
    <children>
       <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../img/logo.png" />
          </image>
       </ImageView>
-      <Button fx:id="monCompte" layoutX="877.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToMonCompte" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="MON COMPTE" textFill="WHITE" />
+      <Button fx:id="monCompte" layoutX="877.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToMonCompte" styleClass="buttonBlue" text="MON COMPTE" textFill="WHITE" />
       <Button fx:id="coachs" layoutX="764.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToCoachs" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="COACHS" textFill="WHITE" />
       <Button fx:id="monEspace" layoutX="520.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="MON ESPACE" textFill="WHITE" />
       <Button fx:id="shop" layoutX="650.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="SHOP" textFill="WHITE" />
