--- a/src/main/resources/com/fitj/views/seances/create-seance.fxml
+++ b/src/main/resources/com/fitj/views/seances/create-seance.fxml
@@ -17,7 +17,7 @@
     <children>
         <Pane layoutX="139.0" layoutY="173.0" prefHeight="515.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
             <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="86.0" layoutX="372.0" layoutY="398.0" stroke="#054371" strokeLineCap="ROUND" strokeLineJoin="ROUND" styleClass="rectangleShape" width="334.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="86.0" layoutX="372.0" layoutY="420.0" stroke="#054371" strokeLineCap="ROUND" strokeLineJoin="ROUND" styleClass="rectangleShape" width="334.0" />
                 <Text fill="#054371" layoutX="17.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exercices de la séances">
                     <font>
                         <Font size="14.0" />
@@ -26,18 +26,18 @@
                 <TextField fx:id="nomSeance" layoutX="196.0" layoutY="49.0" prefHeight="28.0" prefWidth="334.0" styleClass="emptyRectangle" />
                     <ListView fx:id="listViewExercice" layoutX="372.0" layoutY="134.0" onMouseClicked="#setExerciceSelected" prefHeight="150.0" prefWidth="334.0" styleClass="emptyRectangle" />
                 <ListView fx:id="listViewExerciceSeance" layoutX="17.0" layoutY="134.0" onMouseClicked="#setExerciceSelectedToDelete" prefHeight="150.0" prefWidth="334.0" styleClass="emptyRectangle" />
-                <Button fx:id="deleteExerciceButton" layoutX="115.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#supprimerExercice" prefHeight="27.0" prefWidth="92.0" style="-fx-background-color: #054371;" text="Supprimer" textFill="WHITE" visible="false" />
+                <Button fx:id="deleteExerciceButton" layoutX="124.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#supprimerExercice" prefHeight="27.0" prefWidth="92.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
                 <Button fx:id="addExerciceButton" layoutX="374.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#addExercice" prefHeight="25.0" prefWidth="92.0" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
                 <Text fill="#054371" layoutX="283.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la séance">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Text>
-                <TextArea fx:id="descriptionSeance" layoutX="17.0" layoutY="397.0" prefHeight="86.0" prefWidth="334.0" scaleShape="false" styleClass="emptyRectangle" />
-                <Text fill="#054371" layoutX="17.0" layoutY="393.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
-                <Text fill="#054371" layoutX="372.0" layoutY="393.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix" />
-                <Slider fx:id="prixSeance" layoutX="390.0" layoutY="425.0" max="200.0" onMouseReleased="#updateMontantSeance" prefHeight="33.0" prefWidth="298.0" showTickLabels="true" />
-                <Text fx:id="montantSeance" fill="RED" layoutX="657.0" layoutY="393.0" strokeType="OUTSIDE" strokeWidth="0.0" text="montant" />
+                <TextArea fx:id="descriptionSeance" layoutX="17.0" layoutY="419.0" prefHeight="86.0" prefWidth="334.0" scaleShape="false" styleClass="emptyRectangle" />
+                <Text fill="#054371" layoutX="17.0" layoutY="415.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
+                <Text fill="#054371" layoutX="372.0" layoutY="415.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix" />
+                <Slider fx:id="prixSeance" layoutX="390.0" layoutY="447.0" max="200.0" onMouseReleased="#updateMontantSeance" prefHeight="33.0" prefWidth="298.0" showTickLabels="true" />
+                <Text fx:id="montantSeance" fill="RED" layoutX="657.0" layoutY="415.0" strokeType="OUTSIDE" strokeWidth="0.0" text="montant" />
             <Spinner fx:id="nbSerieModifButton" layoutX="16.0" layoutY="311.0" onKeyPressed="#updateExercice" prefHeight="26.0" prefWidth="164.0" styleClass="emptyRectangle" />
             <Spinner fx:id="nbRepetModifButton" layoutX="184.0" layoutY="311.0" onKeyPressed="#updateExercice" prefHeight="26.0" prefWidth="164.0" styleClass="emptyRectangle" />
             <Spinner fx:id="nbSerieButton" layoutX="374.0" layoutY="311.0" prefHeight="26.0" prefWidth="164.0" styleClass="emptyRectangle" />
